--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name":"Color Picker",
+    "name":"Color Picker by SNP",
     "version": "1.0",
     "manifest_version":3,
     "background":{
